# life_weeks_bot

./: .dockerignore  .gitignore  Dockerfile  database.py  docker-compose.yml  entrypoint.sh  main.py  models.py  pyproject.toml  settings.py
app/: main.py
app/bots/telegram/: handlers.py  keyboards.py
app/core/: database.py
app/db/: models.py
app/models/: user.py
app/services/: life_calendar.py  user_service.py
app/telegram/: bot.py
app/telegram/handlers/: birthdate.py  start.py
migrations/: env.py
migrations/versions/: 17ce6e2d4424_.py
src/services/: update_info.py
